# win-script-hub

./: .gitignore  README.md  create-icon.js  generate-icon.ps1  generate_icon.py  package-lock.json  package.json  tauri.conf.json  vite.config.js  快速启动.bat
scripts/: 一键启动脚本.bat
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
